// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletConnectApproval populates page information using request data 1`] = `
<ApprovalModal
  isVisible={true}
>
  <Component
    currentPageInformation={
      {
        "icon": "testIcon",
        "title": "testName",
        "url": "testUrl",
      }
    }
    walletConnectRequest={true}
  />
</ApprovalModal>
`;

exports[`WalletConnectApproval renders 1`] = `
<ApprovalModal
  isVisible={true}
>
  <Component
    currentPageInformation={
      {
        "icon": undefined,
        "title": undefined,
        "url": undefined,
      }
    }
    walletConnectRequest={true}
  />
</ApprovalModal>
`;

exports[`WalletConnectApproval sets isVisible to false if incorrect approval request type 1`] = `
<Modal
  animationType="none"
  deviceHeight={null}
  deviceWidth={null}
  hardwareAccelerated={false}
  hideModalContentWhileAnimating={false}
  onBackdropPress={[Function]}
  onModalHide={[Function]}
  onModalWillHide={[Function]}
  onModalWillShow={[Function]}
  onRequestClose={[Function]}
  panResponderThreshold={4}
  scrollHorizontal={false}
  scrollOffset={0}
  scrollOffsetMax={0}
  scrollTo={null}
  statusBarTranslucent={false}
  supportedOrientations={
    [
      "portrait",
      "landscape",
    ]
  }
  swipeDirection="down"
  swipeThreshold={100}
  transparent={true}
  visible={false}
/>
`;

exports[`WalletConnectApproval sets isVisible to false if no approval request 1`] = `
<Modal
  animationType="none"
  deviceHeight={null}
  deviceWidth={null}
  hardwareAccelerated={false}
  hideModalContentWhileAnimating={false}
  onBackdropPress={[Function]}
  onModalHide={[Function]}
  onModalWillHide={[Function]}
  onModalWillShow={[Function]}
  onRequestClose={[Function]}
  panResponderThreshold={4}
  scrollHorizontal={false}
  scrollOffset={0}
  scrollOffsetMax={0}
  scrollTo={null}
  statusBarTranslucent={false}
  supportedOrientations={
    [
      "portrait",
      "landscape",
    ]
  }
  swipeDirection="down"
  swipeThreshold={100}
  transparent={true}
  visible={false}
/>
`;
